[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/paulloz.ink/InkPlayer.cs" type="Script" id=1]
[ext_resource path="res://TextTest.gd" type="Script" id=2]
[ext_resource path="res://crime_scene.ink" type="Resource" id=3]

[node name="Printer" type="Node"]
script = ExtResource( 2 )

[node name="InkPlayer" type="Node" parent="."]
script = ExtResource( 1 )
autoLoadStory = true
story = ExtResource( 3 )

[node name="Textbox" type="Label" parent="."]
margin_left = 53.0
margin_top = 399.0
margin_right = 960.0
margin_bottom = 559.0
text = "The Crime Scene"
valign = 1

[node name="Choicebox" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -321.0
margin_top = -196.0
margin_right = 324.0
margin_bottom = 7.0

[connection signal="start_story" from="." to="." method="_on_start_story"]
[connection signal="InkChoices" from="InkPlayer" to="." method="_on_choices"]
[connection signal="InkContinued" from="InkPlayer" to="." method="_on_story_continued"]
