[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/paulloz.ink/InkPlayer.cs" type="Script" id=1]
[ext_resource path="res://TextTest.gd" type="Script" id=2]
[ext_resource path="res://Promise.ink" type="Resource" id=3]

[node name="Background" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="SignalsApproach" type="Node" parent="."]
script = ExtResource( 2 )

[node name="InkPlayer" type="Node" parent="SignalsApproach"]
script = ExtResource( 1 )
autoLoadStory = true
story = ExtResource( 3 )

[node name="Scorebox" type="Label" parent="SignalsApproach"]
margin_left = 53.0
margin_top = 496.0
margin_right = 208.0
margin_bottom = 559.0
text = "Distrust is now 0"
valign = 1
autowrap = true

[node name="ChoiceSelector" type="VBoxContainer" parent="SignalsApproach"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -44.0
margin_right = 214.0
margin_bottom = 198.0

[node name="Scrollbox" type="RichTextLabel" parent="SignalsApproach"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -304.0
margin_top = 24.0
margin_right = 312.0
margin_bottom = 202.0
scroll_following = true
